--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <title>React App</title>
     <style>
       html, body, #app-root {
+        height: 100%;
+        width: 100%;
         padding: 0;
         margin: 0;
         overflow: hidden;
